--- a/docpass.html
+++ b/docpass.html
@@ -50,7 +50,16 @@
                 </div>
             </div>
             <div class="become-rep">
-                <button class="rep" onclick="window.location.href='dompask.html';" >Стать репетитором</button>
+                <a href="dompask.html"> <div class="container-contact100-form-btn">
+                    <div class="wrap-contact100-form-btn">
+                        <div class="contact100-form-bgbtn"></div>
+                        <button class="rep contact100-form-btn">
+                            <span>
+                                Стать репетитором
+                            </span>
+                        </button>
+                    </div>
+                    </div>
             </div>
         </div>
     </header>
