--- a/docpass.html
+++ b/docpass.html
@@ -50,16 +50,9 @@
                 </div>
             </div>
             <div class="become-rep">
-                <a href="dompask.html"> <div class="container-contact100-form-btn">
-                    <div class="wrap-contact100-form-btn">
-                        <div class="contact100-form-bgbtn"></div>
-                        <button class="rep contact100-form-btn">
-                            <span>
+                        <button class="rep">
                                 Стать репетитором
-                            </span>
                         </button>
-                    </div>
-                    </div>
             </div>
         </div>
     </header>
