change the button

--- a/dompask.html
+++ b/dompask.html
@@ -41,7 +41,17 @@
                     <option value="">англиский</option>
                 </select>
                 <div class="put">
-                    <button class="ter">далее</button>
+                    <a href="docpass.html"> <div class="container-contact100-form-btn">
+              <div class="wrap-contact100-form-btn">
+                <div class="contact100-form-bgbtn"></div>
+                  <button class="contact100-form-btn rep">
+                    <span>
+                    Далее
+                    </span>
+                </button>
+              </div>
+            </div>
+</a>
                 </div>
             </div>
         </div>
