change the link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container" id="teacher">
         <h1>Учитель,который поможет с математикой </h1>
         <a class="found">Найти репетитора</a>
-        <a class="become" href="docpass.html">Стать репетитором</a>
+        <a class="become" href="dompask.html">Стать репетитором</a>
     </div>
     <div class="predmetbg">
         <h3>Предметы</h3>
