--- a/dompask.html
+++ b/dompask.html
@@ -44,7 +44,7 @@
                     <a href="docpass.html"> <div class="container-contact100-form-btn">
               <div class="wrap-contact100-form-btn">
                 <div class="contact100-form-bgbtn"></div>
-                  <button class="contact100-form-btn rep">
+                  <button class="contact100-form-btn ter">
                     <span>
                     Далее
                     </span>
