--- a/dompask.html
+++ b/dompask.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="container taught">
+        <div class="container">
             <a class="teach">Учись.бай</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
