--- a/dompask.html
+++ b/dompask.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="container taught">
             <a class="teach">Учись.бай</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
@@ -19,6 +19,8 @@
                 <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
+        </div>
+        <div class="container">
             <h1>Станьте репетитором и зарабатывайте сами</h1>
             <div class="seet-pgp">
                 <div class="pgp">
