--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="review.html">Отзывов</a>
             </nav>
         </div>
         <div class="container">
@@ -57,7 +57,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="review.html">Отзывов</a>
             </nav>
         </div>
         <div class="container" id="cheater">
