--- a/docpass.html
+++ b/docpass.html
@@ -15,12 +15,12 @@
 <body>
     <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container">
@@ -58,12 +58,12 @@
     </header>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
