--- a/tex.html
+++ b/tex.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
     </header>
@@ -27,12 +27,12 @@
     </main>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учись.бай”</a>
+            <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
