--- a/teachers.html
+++ b/teachers.html
@@ -19,7 +19,7 @@
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
     </header>
@@ -127,8 +127,8 @@
             <nav class="down">
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="about.html">О нас</a>
+                <a href="#">review.html</a>
             </nav>
         </div>
         <div class="container" id="help">
