--- a/review.html
+++ b/review.html
@@ -16,9 +16,9 @@
         <div class="container taught">
             <a class="teach">onl-home.studding.by</a>
             <nav>
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывы</a>
             </nav>
         </div>
@@ -139,9 +139,9 @@
         <div class="container firma">
             <a href="#" class="teach">ООО “onl-home.studding.by”</a>
             <nav class="down">
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="#">about.html</a>
                 <a href="#">Отзывы</a>
             </nav>
             <div class="container" id="support">
