--- a/dompask.html
+++ b/dompask.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="review.html">Отзывов</a>
             </nav>
         </div>
         <div class="container">
@@ -60,12 +60,12 @@
     </header>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="review.html">Отзывов</a>
             </nav>
         </div>
         <div class="container" id="cheater">
