--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
@@ -171,7 +171,7 @@
     </div>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
