--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="border-about">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
@@ -52,7 +52,7 @@
     </header>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
