--- a/review.html
+++ b/review.html
@@ -136,17 +136,17 @@
         </main>
     </div>
     <footer id="last-comments">
-        <div class="container firma">
-            <a href="#" class="teach">ООО “onl-home.studding.by”</a>
-            <nav class="down">
+       <div class="container firma">
+            <a href="#" class="teach">Onl-home.studding.by</a>
+            <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">about.html</a>
-                <a href="#">Отзывы</a>
+                <a href="about.html">О нас</a>
+                <a href="review.html">Отзывов</a>
             </nav>
-            <div class="container" id="support">
-                <a href="tex.html" class="tech">Тех. поддержка</a>
-            </div>
+        </div>
+        <div class="container" id="cheater">
+            <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
 </body>
