--- a/review.html
+++ b/review.html
@@ -135,7 +135,7 @@
             </div>
         </main>
     </div>
-    <footer id="last-comments">
+    <footer >
        <div class="container firma">
             <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
