--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
             <h1>
                 О проекте
             </h1>
-            <p class="project">Проект onl-home.studding направлен на то, чтобы облнгчить обучение детей на дому. Наши репетиторы будут помогать детям делать домашнее задание с полным разбором их разбором и решением, также вы можете стать репетиром, для обучения детей или
+            <p class="project">Проект onl-home.studding направлен на то, чтобы облегчить обучение детей на дому. Наши репетиторы будут помогать делать домашнее задание с полным разбором и решением, также вы можете стать репетиром, для обучения детей или
                 же подростков.</p>
             <div class="h2">
                 <div class="year">
-                    <h2>2+</h2>
+                    <h2>2</h2>
                 </div>
                 <div class="rep">
                     <h2>440+</h2>
@@ -39,7 +39,7 @@
             </div>
             <div class="par">
                 <div class="years">
-                    <p>Года работы с детьми и подростаким</p>
+                    <p>Года работы с детьми и подростками</p>
                 </div>
                 <div class="reps">
                     <p>Репетиторов - Наша гордость, Цель проекта</p>
