--- a/review.html
+++ b/review.html
@@ -145,7 +145,7 @@
                 <a href="review.html">Отзывов</a>
             </nav>
         </div>
-        <div class="container" id="cheater">
+        <div class="container" id="support">
             <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
