--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Анастасия</p>
-                    <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                    <p class="tt">Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
                     <p class="date">18.03.2021</p>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
                     <p class="date">17.04.2021</p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
                     <p class="date">02.05.2021</p>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
                     <p class="date">17.04.2021</p>
                 </div>
             </div>
@@ -187,3 +187,4 @@
     
 </body>
 </html>
+
