add container in teachers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#">География</a>
         </div>
     </div>
-    <div id="teachers">
+    <div id="teachers" class="container">
         <div class="teacher">
             <img src="images/russian.png" alt="">
             <img class="star" src="images/stars.png" alt="">
