--- a/about.html
+++ b/about.html
@@ -11,15 +11,19 @@
 
 <body>
     <header>
+        <div class="container">
         <div class="border-about">
-            <a class="teach">Onl-home.studding.by</a>
+            <a class="teach" href="index.html">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="review.html">Отзывов</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
+    </div>
+    </header>
+    <main>
         <div class="container">
             <h1>
                 О проекте
@@ -49,7 +53,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </main>
     <footer>
         <div class="container firma">
             <a href="#" class="teach">Onl-home.studding.by</a>
@@ -57,7 +61,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="review.html">Отзывов</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
