--- a/review.html
+++ b/review.html
@@ -142,7 +142,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="review.html">Отзывов</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="support">
