--- a/teachers.html
+++ b/teachers.html
@@ -128,7 +128,7 @@
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">review.html</a>
+                <a href="reviews.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="help">
