change link предметы

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывы</a>
             </nav>
@@ -26,7 +26,7 @@
         <a class="found">Найти репетитора</a>
         <a class="become" href="dompask.html">Стать репетитором</a>
     </div>
-    <div class="predmetbg">
+    <div class="predmetbg" id="predmets">
         <h3>Предметы</h3>
         <div class="container predmet">
             <a href="#">Химия</a>
