change link предметы

--- a/teachers.html
+++ b/teachers.html
@@ -17,7 +17,7 @@
             <a class="teach">onl-home.studding.by</a>
             <nav>
                 <a href="#">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывы</a>
             </nav>
