--- a/teachers.html
+++ b/teachers.html
@@ -126,7 +126,7 @@
             <a href="#" class="teach">ООО “onl-home.studding.by”</a>
             <nav class="down">
                 <a href="#">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывы</a>
             </nav>
