--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <a class="teach" href="index.html">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывы</a>
             </nav>
@@ -59,7 +59,7 @@
             <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывы</a>
             </nav>
