--- a/dompask.html
+++ b/dompask.html
@@ -15,7 +15,7 @@
             <a class="teach">Onl-home.studding.by</a>
             <nav>
                 <a href="teachers.html">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывов</a>
             </nav>
@@ -63,7 +63,7 @@
             <a href="#" class="teach">Onl-home.studding.by</a>
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
-                <a href="#">Предметы</a>
+                <a href="index.html#predmets">Предметы</a>
                 <a href="about.html">О нас</a>
                 <a href="review.html">Отзывов</a>
             </nav>
