--- a/found.html
+++ b/found.html
@@ -19,6 +19,42 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="container reg">
+        <h1>Поиск репетитора для онлайн обучения школьной программе, а также углубленного изучения профильных предметов</h1>
+        <p>Мы найдём лучшего репетитора для вашего ребёнка</p>
+        <select name="" id="predmety">
+            <option value="">Предмет</option>
+            <option value="">математика</option>
+            <option value="">русский язык</option>
+            <option value="">химия</option>
+            <option value="">биология</option>
+            <option value="">английский язык</option>
+            <option value="">физика</option>
+            <option value="">история Беларуси</option>
+            <option value="">всемирная история</option>
+            <option value="">география</option>
+        </select>
+        <select name="" id="age">
+            <option value="">Возраст учителя</option>
+            <option value="">От 22 до 28</option>
+            <option value="">От 29 до 37</option>
+            <option value="">От 37 до 48</option>
+            <option value="">От 48 и старше</option>
+        </select>
+        <select name="" id="education">
+            <option value="">Формат обучения</option>
+            <option value="">Онлайн углубленное обучение</option>
+            <option value="">Домашнее углубленное обучение</option>
+            <option value="">Онлайн обучение школьной программе</option>
+            <option value="">Домашнее обучение школьной программе</option>
+        </select>
+        <a href="review.html" class="through">Просмотреть отзывы</a>
+        <a href="index.html" class="search">Начать поиск</a>
+        </div>
+
+        
+    </main>
     <footer>
         <div class="container firma">
             <a href="#" class="teach">Onl-home.studding.by</a>
