--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <div class="container" id="teacher">
         <h1>Учитель,который поможет с математикой </h1>
-        <a class="found">Найти репетитора</a>
+        <a class="found" href="found.html">Найти репетитора</a>
         <a class="become" href="dompask.html">Стать репетитором</a>
     </div>
     <div class="predmetbg" id="predmets">
