--- a/teachers.html
+++ b/teachers.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="teachers.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  
 </head>
 
 <body id="bodddy">
@@ -131,7 +130,7 @@
                 <a href="review.html">Отзывы</a>
             </nav>
         </div>
-        <div class="container" id="help">
+        <div class="container" id="cheater">
             <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
