--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Огромное спасибо Татьяне, все очеь понятно обьяснила. Будкм рады с вами работать!</p>
                     <p class="date">17.04.2021</p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Вот это я понимаю, даже лучше чем в школе. Сын стал намного лучше учиться</p>
                     <p class="date">02.05.2021</p>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p class="tt">Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="tt">Мне понравилось! Химию объяснили доходчиво в довольно позновательно.Было классно!</p>
                     <p class="date">17.04.2021</p>
                 </div>
             </div>
