--- a/review.html
+++ b/review.html
@@ -130,7 +130,7 @@
                     <a href="#">6</a>
                     <a href="#">7</a>
                     <a href="#">8</a>
-                    <a class="go" href="#">Дальше</a>
+                    <a class="go" href="#">Далее</a>
                 </div>
             </div>
         </main>
@@ -145,10 +145,11 @@
                 <a href="review.html">Отзывы</a>
             </nav>
         </div>
-        <div class="container" id="support">
+        <div class="container" id="cheater">
             <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
 </body>
 
 </html>
+
