--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="text">
                     <p class="name">Михаил</p>
-                    <p class="tt">Мне понравилось! Химию объяснили доходчиво в довольно позновательно.Было классно!</p>
+                    <p class="tt">Мне понравилось! Химию объяснили доходчиво, меня устроило. Спасибо!</p>
                     <p class="date">17.04.2021</p>
                 </div>
             </div>
